--- a/public/userPage.css
+++ b/public/userPage.css
@@ -7,9 +7,9 @@ body{
   margin: 0 auto;
 }
 h1{
-  margin: 40px auto;
-  color: #2E2E2E;
-  text-align: center;
+  margin: 0px auto;
+  color: #ffffff;
+
 }
 ul{
   padding: 0;
@@ -95,4 +95,56 @@ footer a{
   margin-bottom: 30px;
   padding: 30px;
   border-radius: 20px;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  margin-bottom: 100px;
+  background-color: #333;
+  color: #0066cc;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.header-title h1 {
+  margin: 0;
+  font-size: 1.5rem;
+  color: #0066cc;
+}
+
+/* Navbar Styles */
+.navbar {
+  display: flex;
+  gap: 10px;
+}
+
+.nav-button {
+  background-color: #0066cc;
+  color: #fff;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.nav-button:hover {
+  background-color: #015bb6;
+}
+
+/* Logout Button */
+#logout-button {
+  background-color: #e74c3c;
+  color: #fff;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.logout-button:hover {
+  background-color: #c0392b;
 }
