--- a/views/userPage.ejs
+++ b/views/userPage.ejs
@@ -9,9 +9,30 @@
     const userId = '<%= id %>' // ---------> Getting the user Id (used in userPage.js)
   </script>
 </head>
+
+
 <body>
+  
+  <header class="header">
+    <!-- Website Title -->
+    <div class="header-title">
+      <h1>To-Do-Web</h1>
+    </div>
+
+    <!-- Navbar -->
+    <nav class="navbar">
+      <button class="nav-button" onclick="navigateTo('create-task')">Create Task</button>
+      <button class="nav-button" onclick="navigateTo('teams')">Teams</button>
+      <button class="nav-button" onclick="navigateTo('user')">User</button>
+    </nav>
+
+    <!-- Logout Button -->
+    <div class="logout">
+      <button id="logout-button">Logout</button>
+    </div>
+  </header>
+  
   <div class="wrapper"></div>
-    <h1>To-do-list</h1>
 
     <!-- output list -->
     <div id="taskContainer">
