--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="index.css" />
     <title>LOGIN</title>
   </head>
   <body type="body">
@@ -69,5 +69,5 @@
       </form>
     </div>
   </body>
-  <script src="main.js"></script>
+  <script src="index.js"></script>
 </html>
