teams view added

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -22,7 +22,7 @@
     <!-- Navbar -->
     <nav class="navbar">
       <button class="nav-button" id="createTaskButton" >Create Task</button>
-      <button class="nav-button" >Teams</button>
+      <button class="nav-button" id="teamsButton">Teams</button>
       <button class="nav-button" >User</button>
     </nav>
 
