--- a/views/createTask.ejs
+++ b/views/createTask.ejs
@@ -32,6 +32,7 @@
 
   <!-- Main Content -->
   <main>
+    <div id="notificationArea" class="notification" style="display: none;"></div>
     <div class="form-container">
       <h2>Create New Task</h2>
       <form id="createTaskForm">
