--- a/views/teams.ejs
+++ b/views/teams.ejs
@@ -37,7 +37,7 @@
     <div id="teamsContainer" class="teams-container"></div>
 
     <div id="createTeamModal" class="modal" style="display: none;">
-  <div class="modal-content">
+  <div class="modal-content" id="createTeamContainer" style="display: none;">
     <button class="close-button" onclick="closeCreateTeamModal()">×</button>
     <h3>Create New Team</h3>
     <form id="createTeamForm">
@@ -67,6 +67,8 @@
       </div>
     </form>
   </div>
+  <div class="modal-content" id="teamInfContainer" style="display: none;">
+    
 </div>
 
   </main>
